# dslink

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
arm7/: Makefile
arm7/source/: main.c  memcpy.h  memcpy.s  reset.s
arm9/: Makefile
arm9/source/: display.c  display.h  main.c  mpusetup.s  reset.s
host/: Makefile
host/source/: little.h  main.cpp  ndsheader.h
source/: bootstubarm7.s  bootstubarm9.s  console.c  main.c
